--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,11 +1,11 @@
-<% provide(:title, 'How to use your web room') %>
+<% provide(:title, 'How to use your webroom | myWebRoom') %>
 
 
 
 
 <!-- META DATA -->
 <% content_for :head do %>
-    <meta name="description" content="Learn how to use your webroom. Every unique featire explained on this page!">
+    <meta name="description" content="Learn how to use your webroom. Every unique feature explained on this page!">
 <% end %>
 
 
@@ -14,7 +14,7 @@
 <div class="row-fluid">
 
     <!-- AFFIX -->
-    <div class="span4">
+    <div class="span4 help-page-fixed-menu">
         <ul class="nav nav-list" data-spy="affix">
             <li class="nav-header">DECORATE</li>
             <li>
@@ -106,7 +106,8 @@
         <h1>Decorate</h1>
 
         <!-- 1.1 -->
-        <h3 id="change_objects">Change Objects</h3>
+        <div id="change_objects"> </div>
+        <h3>Change Objects</h3>
 
         <p>
             1.&nbsp;&nbsp;Click the <em>Room</em> button in the toolbar
