--- a/app/assets/stylesheets/rooms_profile.css.scss
+++ b/app/assets/stylesheets/rooms_profile.css.scss
@@ -6,7 +6,7 @@ $height_of_the_header_usually:51px; /*The header is usually this height. Browser
 
 #users_profile_container{
   overflow:hidden;
-  width:remainder;
+//  width:remainder;
   line-height:1.5;
   font-size:12px;
   color:#5A5A5A;
