--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -1,7 +1,7 @@
 #about-us-page {
   font-family: "Open Sans", sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 100;
 }
 
 
@@ -9,6 +9,9 @@
 (1) HEADER
 */
 
+.about-navbar {
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+}
 /*
 (2) TOP IMAGE
 */
@@ -22,6 +25,7 @@
 .about-top-image {
   width: 100%;
   height: 650px;
+  margin-top: -2px;
   background-image: url(http://res.cloudinary.com/hpdnx5ayv/image/upload/v1385161332/about-us-cover-team-myWebRoom.jpg);
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -33,28 +37,43 @@
 /*
 (3) OUR PRODUCT
 */
+#about-black-arrow {
+  margin: 0 0 0 50%;
+  display: inline-block;
+}
+
 .about-our-product {
-  margin-top: 25px;
-  margin-left: 150px;
-  margin-bottom: 50px;
-  margin-right: 150px;
+  margin-top: -4px;
+  margin-left: 10%;
+  margin-bottom: 40px;
+  margin-right: 10%;
+}
+
+.about-our-product-heading {
+  margin: 25px 0px 16.9px 0px;
 }
 
 #product-description {
   font-size: 1.75em;
   line-height: 41px;
   font-weight: 100;
+  margin-bottom: 40px;
 }
 
-#about-black-arrow {
-  padding: 0px 0px 0px 590px;
-  display: inline-block;
+.about-title-quote-figures {
+  margin: 40px 0 40px 0;
+
 }
+
+.about-image-spacing {
+  margin-bottom: 40px;
+}
+
 /*
 (4) ABOUT US
 */
 .about-us-text {
-  padding-top: 128px;
+  padding-top: 95px;
   max-height: 450px;
   overflow: auto;
 }
@@ -80,7 +99,7 @@
 }
 
 .about-individual-picture {
-/*  border: solid #00ccff 2px;*/
+  border: solid #00ccff 3px;
   max-height: 250px;
   max-width: 250px;
   -webkit-border-radius: 50%;
@@ -152,25 +171,32 @@ So... x = (250^2/2)^(1/2)
 (6) JOIN THE TEAM
 */
 .about-join-team {
-  margin-top: 40px;
+  margin-top: 15px;
 }
 /*
 (7) PARTNERS
 */
 .about-partners {
-  margin-top: 32px;
+  margin-top: 40px;
+}
+.about-partners-text {
+  padding-right: 28px;
+  margin-bottom: 0px;
 }
 /*
 (8) FEEDBACK
 */
 .about-feedback {
-  margin-top: 96px;
+  margin-top: 58px;
+}
+.about-feedback-send-email {
+  padding-top: 12px;
 }
 /*
 (9) PRESS
 */
 .about-press {
-  margin-top: 42px;
+  margin-top: 45px;
 }
 
 /*
@@ -208,20 +234,34 @@ TEXT FONT / COLOR
 .about-heading-black {
   font-weight: 200;
   color: #000000;
+  margin-bottom: 22.5px;
 }
 .about-heading-white {
   font-weight: 200;
   color: #ffffff;
+  margin-bottom: 22.5px;
+}
+.about-heading-white-social {
+  font-weight: 200;
+  color: #ffffff;
+  margin: 0px;
 }
 .about-text-black {
   color: #343434;
-  font-size: 1.15em;
+  font-size: 1.35em;
+  line-height: 25px;
 }
 .about-text-black-bigger {
   color: #343434;
-  font-size: 1.3em;
+  font-size: 1.5em;
+  line-height: 30px;
 }
 .about-text-white {
+  color: #ffffff;
+  font-size: 1.35em;
+  line-height: 25px;
+}
+.about-text-white-social {
   color: #ffffff;
   font-size: 1.15em;
 }
@@ -251,16 +291,26 @@ SECTION HEIGHT
 .about-section {
   height: 560px;
 }
+.about-section-partners {
+  height: 575px;
+}
+
+/*
+GET STARTED BUTTON PADDING
+*/
+.get-started-button {
+  padding: 40px 0px 20px 0px;
+}
 
 /*
 RECTANGLE PADDING
 */
 .padding-top-small {
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 .padding-bottom-small {
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 /*
 TEXT ABOUT RECTANGLE PADDING
@@ -274,13 +324,16 @@ MARGIN
 .about-margin-top {
   margin-top: 70px;
 }
+.about-margin-top-partners {
+  margin-top: 80px;
+}
 
 .about-margin-left {
   margin-left: 135px;
 }
 
 .about-margin-left-small {
-  margin-left: 65px;
+  margin-left: 10%;
 }
 
 .about-margin-right {
@@ -288,5 +341,5 @@ MARGIN
 }
 
 .about-margin-right-small {
-  margin-right: 65px;
+  margin-right: 10%;
 }
