--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -22,7 +22,7 @@
             'background-color': '#333333',
             'margin-top': '0px',
             'border-top': 'none',
-            'height': '100px'
+            'height': '25px'
         });
     });
 </script>
@@ -44,9 +44,7 @@
     <div class="about-our-product">
         <img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1385607924/about-black-arrow.png" id="about-black-arrow">
 
-        <h2 class="about-heading-black">OUR PRODUCT</h2>
-
-        <br>
+        <h2 class="about-heading-black about-our-product-heading">OUR PRODUCT</h2>
 
         <p id="product-description" class="about-text-black">
             We’ve created an easy and exciting new way for you to keep your online life organized and accessible. Your web room is a visual profile of everything you love. It’s a place where you can express yourself through design, bookmark your favorite sites, interact with products, and connect with friends, all from one beautiful interface.
@@ -58,33 +56,21 @@
  -->
         <hr>
 
-        <br>
-        <br>
-
-        <p class="text-center about-text-black-bigger about-margin-left-small about-margin-right-small">
+        <p class="text-center about-text-black-bigger about-title-quote-figures about-margin-left-small about-margin-right-small">
             MyWebRoom.com is a visual place where you can access your favorite websites, discover new content, connect with friends and interact with the products you love, all from one beautiful interface.
         </p>
 
-        <br>
-
-        <div class="center">
+        <div class="about-image-spacing center">
             <%= cl_image_tag("product-desktop-team-myWebRoom.png", :quality => 100, :default_image => "default_image_all.png")%>
         </div>
 
-        <div class="about-margin-left about-margin-right">
-            <hr>
-        </div>
+        <hr>
 
-        <br>
-        <br>
-
-        <p class="text-center about-text-black-bigger">
-            Shop, study, book a vacation, listen to music, watch movies and more from the comfort of your private online room.
+        <p class="text-center about-text-black-bigger about-title-quote-figures about-margin-left-small about-margin-right-small">
+            Choose a room, fill it with furniture, organize sites in objects. Shop, study, book a vacation, listen to music, watch movies and more from the comfort of your private online room.
         </p>
 
-        <br>
-
-        <div class="center">
+        <div class="about-image-spacing center">
             <%= cl_image_tag("product-bookmarks-objects-team-myWebRoom.png", :quality => 100, :default_image => "default_image_all.png")%>
         </div>
 
@@ -324,7 +310,7 @@
                         <div class="about-wrapper">
                             <div class="about-background"></div>
                             <div class="about-individual-picture">
-                                <%= cl_image_tag("natalie-team-myWebRoom.png", height: 250, width: 250, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%>
+                                <%= cl_image_tag("nathalie-team-myWebRoom.png", height: 250, width: 250, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%>
                             </div>
                             <p class="about-quote about-quote-medium">
                                  "All that we see or seem is but a dream within a dream."<br>Edgar Allen Poe
@@ -354,8 +340,8 @@
                             </p>
                         </div>
                         <div class="caption text-center">
-                            <h4>Dana</h4>
-                            <h4 class="about-text-blue">Social Media Expert</h4>
+                            <h4>Dana Johnson</h4>
+                            <h4 class="about-text-blue">Social Media Artist</h4>
                             <span>
                                 <a href="http://www.linkedin.com/"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
@@ -415,14 +401,18 @@
                     <div class="about-join-team about-margin-right">
                         <h2 class="about-heading-black">JOIN THE TEAM</h2>
                         <p class="about-text-black">
-                            Want to be part of the Rooms team? We’re always looking for talented and motivated Roommates who are ready to step into a pair of house slippers. You can get in touch with us at hr@mywebroom.com. The positions we have open now:
+                            Want to be part of the Rooms team? We’re always looking for talented and motivated Roommates who are ready to step into a pair of house slippers. You can get in touch with us at hr@mywebroom.com.
+                        </p>
+                        <p class="about-text-black">
+                            Here are some of the positions we have open now:
                         </p>
                         <ul class="about-text-black">
-                            <li>Programmers</li>
-                            <li>Designers</li>
-                            <li>Marketers</li>
+                            <li>Full Stack Engineer</li>
+                            <li>Front-end Engineer</li>
+                            <li>Graphic Designer</li>
                             <li>Interior Designer</li>
                         </ul>
+                        <br>
                         <p class="about-text-black">
                             SUBMIT YOUR RESUME
                         </p>
@@ -431,8 +421,7 @@
                                 <img class="media-object" src="<%= cloudinary_url('email.png') %>">
                             </a>
                             <div class="media-body">
-                                <br>
-                                <div class="about-text-black">hr@mywebroom.com</div>
+                                <div class="about-text-black about-feedback-send-email">hr@mywebroom.com</div>
                             </div>
                         </div>
                     </div>
@@ -445,12 +434,12 @@
 
 
     <!-- (7) PARTNERS -->
-    <div class="container-fluid about-section about-background-blue">
+    <div class="container-fluid about-section-partners about-background-blue">
         <div class="row-fluid">
             <div class="span6">
                 <div class="about-partners about-margin-left">
                     <h2 class="about-heading-white padding-left-small">PARTNERS</h2>
-                    <p class="about-text-white padding-left-small">
+                    <p class="about-text-white padding-left-small about-partners-text">
                         We’re excited to have so many cool partners on board and we’re always open to new business opportunities. Let’s see how we can help each other out! If you’re interested in doing business with Rooms, please contact us at <a href="mailto:partners@mywebroom.com">partners@mywebroom.com</a>.
                     </p>
                     <br>
@@ -491,7 +480,7 @@
                     </div>
                 </div>
             </div>
-            <div class="about-margin-top">
+            <div class="about-margin-top-partners">
                 <div class="span6 center">
                     <%= cl_image_tag("partners-team-myWebRoom.png", height: 420, width: 420, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%>
                 </div>
@@ -515,6 +504,7 @@
                         <p class="about-text-black">
                             This website is for you, so we want to hear your opinions about how we can improve your experience on myWebRoom.com to make it the best place to be online. Have a great idea for a new room design, think your favorite site should be added to Rooms so everyone can discover it? Let us know!
                         </p>
+                        <br>
                         <p class="about-text-black">
                             SEND FEEDBACK
                         </p>
@@ -523,8 +513,7 @@
                                 <img class="media-object" src="<%= cloudinary_url('email.png') %>">
                             </a>
                             <div class="media-body">
-                                <br>
-                                <div class="about-text-black">info@mywebroom.com</div>
+                                <div class="about-text-black about-feedback-send-email">info@mywebroom.com</div>
                             </div>
                         </div>
                     </div>
@@ -542,7 +531,7 @@
             <div class="span6">
                 <div class="about-press about-margin-left">
                     <h2 class="about-heading-black padding-left-small">PRESS</h2>
-                    <p class="about-text-black padding-left-small">
+                    <p class="about-text-black padding-left-small about-partners-text">
                         The news about myWebRoom.com is spreading! We’ve been featured on tech, startup, and interior design sites. Here are a few articles so you can see and share the love.
                     </p>
                     <br>
@@ -610,8 +599,8 @@
                                     <img class="media-object" src="<%= cloudinary_url('email.png') %>">
                                 </a>
                                 <div class="media-body">
-                                    <h4 class="media-heading about-heading-white">EMAIL</h4>
-                                    <div class="about-text-white">info@mywebroom.com</div>
+                                    <h4 class="media-heading about-heading-white-social">EMAIL</h4>
+                                    <div class="about-text-white-social">info@mywebroom.com</div>
                                 </div>
                             </div>
 
@@ -621,8 +610,8 @@
                                     <img class="media-object" src="<%= cloudinary_url('facebook.png') %>">
                                 </a>
                                 <div class="media-body">
-                                    <h4 class="media-heading about-heading-white">FACEBOOK</h4>
-                                    <div class="about-text-white">facebook.com/myWebRoom</div>
+                                    <h4 class="media-heading about-heading-white-social">FACEBOOK</h4>
+                                    <div class="about-text-white-social">facebook.com/myWebRoom</div>
                                 </div>
                             </div>
 
@@ -632,8 +621,8 @@
                                     <img class="media-object" src="<%= cloudinary_url('twitter.png') %>">
                                 </a>
                                 <div class="media-body">
-                                    <h4 class="media-heading about-heading-white">TWITTER</h4>
-                                    <div class="about-text-white">twitter.com/roomsInc</div>
+                                    <h4 class="media-heading about-heading-white-social">TWITTER</h4>
+                                    <div class="about-text-white-social">twitter.com/roomsInc</div>
                                 </div>
                             </div>
                         </div>
@@ -644,8 +633,8 @@
                                     <img class="media-object" src="<%= cloudinary_url('pinterest.png') %>">
                                 </a>
                                 <div class="media-body">
-                                    <h4 class="media-heading about-heading-white">PINTEREST</h4>
-                                    <div class="about-text-white">pinterest.com/myWebRoom</div>
+                                    <h4 class="media-heading about-heading-white-social">PINTEREST</h4>
+                                    <div class="about-text-white-social">pinterest.com/myWebRoom</div>
                                 </div>
                             </div>
 
@@ -655,8 +644,8 @@
                                     <img class="media-object" src="<%= cloudinary_url('linkedin.png') %>">
                                 </a>
                                 <div class="media-body">
-                                    <h4 class="media-heading about-heading-white">LINKEDIN</h4>
-                                    <div class="about-text-white">linkedin.com/myWebRoom</div>
+                                    <h4 class="media-heading about-heading-white-social">LINKEDIN</h4>
+                                    <div class="about-text-white-social">linkedin.com/myWebRoom</div>
                                 </div>
                             </div>
 
@@ -666,8 +655,8 @@
                                     <img class="media-object" src="<%= cloudinary_url('instagram.png') %>">
                                 </a>
                                 <div class="media-body">
-                                    <h4 class="media-heading about-heading-white">INSTAGRAM</h4>
-                                    <div class="about-text-white">instagram.com/myWebRoom</div>
+                                    <h4 class="media-heading about-heading-white-social">INSTAGRAM</h4>
+                                    <div class="about-text-white-social">instagram.com/myWebRoom</div>
                                 </div>
                             </div>
 
@@ -680,8 +669,8 @@
                     </div>
                     <div class="row-fluid">
                         <div class="span6">
-                            <h3 class="about-heading-white">ADDRESS</h3>
-                            <address class="about-text-white">
+                            <h3 class="about-heading-white-social">ADDRESS</h3>
+                            <address class="about-text-white-social">
                                 340 6th St. Unit 303<br>
                                 San Francisco, CA 94103<br>
                                 <br>
@@ -700,7 +689,7 @@
 
 
     <!-- (11) SIGN UP -->
-    <div class="center about-background-black">
+    <div class="center about-background-black get-started-button">
         <br>
         <br>
         <% if signed_in? %>
