Updated Help Page and About Us changes.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -42,7 +42,7 @@
 
     <!-- (3) OUR PRODUCT -->
     <div class="about-our-product">
-        <img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1385607924/about-black-arrow.png" id="about-black-arrow">
+        <!-- <img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1385837445/about-arrow-2-team-myWebRoom.png" id="about-black-arrow"> -->
 
         <h2 class="about-heading-black about-our-product-heading">OUR PRODUCT</h2>
 
@@ -596,7 +596,7 @@
                         <div class="span6">
                             <div class="media">
                                 <a class="pull-left" href="mailto:info@mywebroom.com">
-                                    <img class="media-object" src="<%= cloudinary_url('email.png') %>">
+                                    <img class="media-object" src="<%= cloudinary_url('email-icon-team-myWebRoom.png') %>">
                                 </a>
                                 <div class="media-body">
                                     <h4 class="media-heading about-heading-white-social">EMAIL</h4>
@@ -607,7 +607,7 @@
 
                             <div class="media">
                                 <a class="pull-left" href="http://facebook.com/myWebRoom">
-                                    <img class="media-object" src="<%= cloudinary_url('facebook.png') %>">
+                                    <img class="media-object" src="<%= cloudinary_url('facebook-icon-team-myWebRoom.png') %>">
                                 </a>
                                 <div class="media-body">
                                     <h4 class="media-heading about-heading-white-social">FACEBOOK</h4>
@@ -618,7 +618,7 @@
 
                             <div class="media">
                                 <a class="pull-left" href="http://twitter.com/roomsInc">
-                                    <img class="media-object" src="<%= cloudinary_url('twitter.png') %>">
+                                    <img class="media-object" src="<%= cloudinary_url('twitter-icon-team-myWebRoom.png') %>">
                                 </a>
                                 <div class="media-body">
                                     <h4 class="media-heading about-heading-white-social">TWITTER</h4>
@@ -630,7 +630,7 @@
 
                             <div class="media">
                                 <a class="pull-left" href="http://pinterest.com/myWebRoom">
-                                    <img class="media-object" src="<%= cloudinary_url('pinterest.png') %>">
+                                    <img class="media-object" src="<%= cloudinary_url('pinterest-icon-team-myWebRoom.png') %>">
                                 </a>
                                 <div class="media-body">
                                     <h4 class="media-heading about-heading-white-social">PINTEREST</h4>
@@ -641,7 +641,7 @@
 
                             <div class="media">
                                 <a class="pull-left" href="http://linkedin.com/myWebRoom">
-                                    <img class="media-object" src="<%= cloudinary_url('linkedin.png') %>">
+                                    <img class="media-object" src="<%= cloudinary_url('linkedin-icon-team-myWebRoom.png') %>">
                                 </a>
                                 <div class="media-body">
                                     <h4 class="media-heading about-heading-white-social">LINKEDIN</h4>
@@ -652,7 +652,7 @@
 
                             <div class="media">
                                 <a class="pull-left" href="http://instagram.com/myWebRoom">
-                                    <img class="media-object" src="<%= cloudinary_url('instagram.png') %>">
+                                    <img class="media-object" src="<%= cloudinary_url('instagram-icon-team-myWebRoom.png') %>">
                                 </a>
                                 <div class="media-body">
                                     <h4 class="media-heading about-heading-white-social">INSTAGRAM</h4>
