--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -24,7 +24,7 @@
 }
 .about-top-image {
   width: 100%;
-  height: 650px;
+  height: 700px;
   margin-top: -2px;
   background-image: url(http://res.cloudinary.com/hpdnx5ayv/image/upload/v1385161332/about-us-cover-team-myWebRoom.jpg);
   background-position: 50% 50%;
@@ -40,17 +40,18 @@
 #about-black-arrow {
   margin: 0 0 0 50%;
   display: inline-block;
+  padding-top: 5px;
 }
 
 .about-our-product {
-  margin-top: -4px;
+  margin-top: 0px;
   margin-left: 10%;
   margin-bottom: 40px;
   margin-right: 10%;
 }
 
 .about-our-product-heading {
-  margin: 25px 0px 16.9px 0px;
+  margin: 40px 0px 16.9px 0px;
 }
 
 #product-description {
