Updated Help Page and About Us changes.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -47,7 +47,7 @@
         <h2 class="about-heading-black about-our-product-heading">OUR PRODUCT</h2>
 
         <p id="product-description" class="about-text-black">
-            We’ve created an easy and exciting new way for you to keep your online life organized and accessible. Your web room is a visual profile of everything you love. It’s a place where you can express yourself through design, bookmark your favorite sites, interact with products, and connect with friends, all from one beautiful interface.
+            We’ve created an easy and exciting way for you to keep your online life organized and accessible. Your web room is a visual profile of everything you love. It’s a place where you can express yourself through design, bookmark your favorite sites, interact with products and connect with friends, all from one beautiful interface.
         </p>
 <!-- 
         <p class="about-text-black">
@@ -532,7 +532,7 @@
                 <div class="about-press about-margin-left">
                     <h2 class="about-heading-black padding-left-small">PRESS</h2>
                     <p class="about-text-black padding-left-small about-partners-text">
-                        The news about myWebRoom.com is spreading! We’ve been featured on tech, startup, and interior design sites. Here are a few articles so you can see and share the love.
+                        The news about myWebRoom.com is spreading! We’ve been featured on tech, startup, and interior design sites. Here are a few of the places we have been featured so you can see and share the love.
                     </p>
                     <br>
                     <div class="container-fluid">
