Updated Help Page.

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -186,7 +186,7 @@
             <br>
             3.&nbsp;&nbsp;Choose the Bundle you'd like to preview.
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: This option will change the entire objects in your room as well.
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: This option will change the entire objects in your room as well.</em>
             <br>
         </p>
 
@@ -339,7 +339,7 @@
 
         <br>
 
-        <h5>Create a Bookmark<h5>
+        <h5>Create a Bookmark</h5>
 
         <p>
             1.&nbsp;&nbsp;If you can't find a site in our library, you have the option to add your own bookmark.
@@ -564,7 +564,7 @@
             <br>
             2.&nbsp;&nbsp;Click the Profile Tab to change your user information.
             <br>
-            3.&nbsp;&nbsp;Once you are done click <em>Save Changes<em>.
+            3.&nbsp;&nbsp;Once you are done click <em>Save Changes</em>.
             <br>
         </p>
 
