--- a/app/views/items_designs/index.html.erb
+++ b/app/views/items_designs/index.html.erb
@@ -43,6 +43,7 @@
 
     <th></th>
     <th></th>
+    <th></th>
   </tr>
 
 <% @items_designs.each do |items_design| %>
@@ -114,6 +115,7 @@
 
     <td><%= link_to 'Show', items_design %></td>
     <td><%= link_to 'Edit', edit_items_design_path(items_design) %></td>
+    <td><%= link_to 'Destroy', items_design, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 
   </tr>
 <% end %>
