--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -311,7 +311,7 @@ padding: 8px 35px;
     </div>
     <!-- 5-->
     <div class="item">
-      <div class="fill" style="background-image:url('http://placekitten.com/900/600');">
+      <div class="fill" style="background-image:url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1386007716/artsy-room-blur.jpg');">
         <div class="container">
 
           <div class="landing_slide_content">
