--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -11,7 +11,7 @@
 
 
 
-<div class="row-fluid">
+<div id="help-page" class="row-fluid">
 
     <!-- AFFIX -->
     <div class="span4 help-page-fixed-menu">
@@ -118,8 +118,7 @@
         <h1>1. Decorate</h1>
 
 <!-- 1.1 -->
-        <div id="change_objects"> </div>
-        <h3>A. Change Objects</h3>
+        <h3 id="change_objects" >A. Change Objects</h3>
 
         <p>
             1.&nbsp;&nbsp;On the toolbar click the <em>Editor</em> button represented by the chair icon.
@@ -186,7 +185,7 @@
             <br>
             3.&nbsp;&nbsp;Choose the Bundle you'd like to preview.
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: This option will change the entire objects in your room as well.
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: This option will change the entire objects in your room as well.</em>
             <br>
         </p>
 
@@ -232,7 +231,7 @@
         <p>
             1.&nbsp;&nbsp;Click <em>Cancel Changes</em> button if you don't want to keep any changes made to your room.
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: you can change multiple objects and save all the changes once you are<br> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: you can change multiple objects and save all the changes once you are<br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;finished updating your room.</em>
             <br>
         </p>
@@ -246,7 +245,7 @@
         <br>
 
 <!-- 1.5 -->
-        <h3 id="add_and_remove_objects">D. Add and Remove Objects</h3>
+        <h3 id="add_and_remove_objects">E. Add and Remove Objects</h3>
 
 <!-- 1.5.1 -->
         <h5>Remove Object</h5>
@@ -274,11 +273,11 @@
         <h5>Add Object</h5>
 
         <p>
-            1.&nbsp;&nbsp;To add the object back, click on the <em>Editor</em> button and the deleted object will appear 
+            1.&nbsp;&nbsp;To add the object back, click on the <em>Editor</em> button and the deleted object will appear
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;greyed out with a plus sign.
             <br>
-            2.&nbsp;&nbsp;Click on the object you would like to add and then click <em>Save Design</em>. 
+            2.&nbsp;&nbsp;Click on the object you would like to add and then click <em>Save Design</em>.
             <br>
         </p>
 
@@ -384,7 +383,7 @@
             <br>
         </p>
 
-        <br> 
+        <br>
 
         <div>
             <%= cl_image_tag("active-bookmarks-help-page-mywebroom.jpg", width: 640, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
@@ -436,7 +435,7 @@
             1.&nbsp;&nbsp;Click on the gear icon and then <em>View Room</em>to checkout your friend's room.
             <br>
         </p>
-            
+
         <br>
 
         <div>
@@ -477,7 +476,7 @@
         <br>
 
 <!-- 3.3 -->
-        <h3 id="upload_your_photos">B. Upload your photos</h3>
+        <h3 id="upload_your_photos">C. Upload your photos</h3>
 
         <p>
             1.&nbsp;&nbsp;Open the photo page on your social tab.
@@ -501,10 +500,10 @@
         <br>
 
 <!-- 3.4 -->
-        <h3 id="share_objects">C. Share Objects</h3>
+        <h3 id="share_objects">D. Share Objects</h3>
 
         <p>
-            1.&nbsp;&nbsp;Click the gear icon to view your friend's room. 
+            1.&nbsp;&nbsp;Click the gear icon to view your friend's room.
             <br>
             2.&nbsp;&nbsp;From your friend's profile view, you can see his objects. From this view you are able to
             <br>
@@ -564,7 +563,7 @@
             <br>
             2.&nbsp;&nbsp;Click the Profile Tab to change your user information.
             <br>
-            3.&nbsp;&nbsp;Once you are done click <em>Save Changes<em>.
+            3.&nbsp;&nbsp;Once you are done click <em>Save Changes</em>.
             <br>
         </p>
 
@@ -635,9 +634,9 @@
         <br>
         <h1 id="faq">Frequently Asked Questions</h1>
         <h3>Help Center</h3>
-        
+
         <br>
-        
+
         <p>
             <div class="text-info">Q.&nbsp;&nbsp;What is myWebRoom? </div>
             <br>
@@ -646,7 +645,7 @@
                 <!-- Click the social icon, then click the <em>Friends</em> or <em>Key Requests</em> tab. You can then click the blue <em>Invite Friends with Facebook</em> button -->
             </div>
         </p>
-        
+
         <br>
 
           <p>
@@ -660,10 +659,10 @@
         </p>
 
         <br>
-        
+
         <p>
             <div class="text-info">
-                Q.&nbsp;&nbsp;Is it free? Do I need to pay for this service? 
+                Q.&nbsp;&nbsp;Is it free? Do I need to pay for this service?
             </div>
             <br>
             <div>
@@ -675,11 +674,11 @@
 
         <p>
             <div class="text-info">
-                Q.&nbsp;&nbsp;What does myWebRoom do? 
+                Q.&nbsp;&nbsp;What does myWebRoom do?
             </div>
             <br>
             <div>
-                A.&nbsp;&nbsp;MyWebRoom provides a beautiful way for you to interact with the web by organizing your favorite sites and apps in furniture and objects inside a custom online room. You can share items from your room on your social sites, store files, shop for furniture and objects, and invite friends to check out your place. MyWebRoom also curates hand-picked products and the hottest sites so you can stay on top of trends from all over the world. It’s a simple way to connect with services, brands, products and people. 
+                A.&nbsp;&nbsp;MyWebRoom provides a beautiful way for you to interact with the web by organizing your favorite sites and apps in furniture and objects inside a custom online room. You can share items from your room on your social sites, store files, shop for furniture and objects, and invite friends to check out your place. MyWebRoom also curates hand-picked products and the hottest sites so you can stay on top of trends from all over the world. It’s a simple way to connect with services, brands, products and people.
             </div>
         </p>
 
@@ -687,11 +686,11 @@
 
         <p>
             <div class="text-info">
-                Q.&nbsp;&nbsp;Why the Room interface? 
+                Q.&nbsp;&nbsp;Why the Room interface?
             </div>
             <br>
             <div>
-                A.&nbsp;&nbsp;We use a room as a visual profile because we all have some sort of space where we feel at home. Your room is a place where you can relax, catch up with what’s going on in the news and entertainment world, study, work, shop the latest trends and chat with friends. Your room is where you display the objects and decor style that defines who you are. The type of art you like, your favorite brands, your hometown sports teams, mementos that bring back memories. Your room represents who you are and it’s filled with everything that matters to you. 
+                A.&nbsp;&nbsp;We use a room as a visual profile because we all have some sort of space where we feel at home. Your room is a place where you can relax, catch up with what’s going on in the news and entertainment world, study, work, shop the latest trends and chat with friends. Your room is where you display the objects and decor style that defines who you are. The type of art you like, your favorite brands, your hometown sports teams, mementos that bring back memories. Your room represents who you are and it’s filled with everything that matters to you.
             </div>
         </p>
 
@@ -703,7 +702,7 @@
             </div>
             <br>
             <div>
-                A.&nbsp;&nbsp;When you click on an object, your bookmarks stored within that object will open. You can also click star on the top screen toolbar to view and access all of your open/active bookmarks.  
+                A.&nbsp;&nbsp;When you click on an object, your bookmarks stored within that object will open. You can also click star on the top screen toolbar to view and access all of your open/active bookmarks.
             </div>
         </p>
 
@@ -711,11 +710,11 @@
 
         <p>
             <div class="text-info">
-                Q.&nbsp;&nbsp;How do I check out my friend’s room? 
+                Q.&nbsp;&nbsp;How do I check out my friend’s room?
             </div>
             <br>
             <div>
-                A.&nbsp;&nbsp;First you need to send your friend a key request. Click the social icon on your toolbar, then click Requests on the left side of your screen. Once they have accepted your request, you can search for your friend in the Search box on the upper left part of the screen, or click the social icon, then click on Friends. Click their name. You are now in your friend’s room! 
+                A.&nbsp;&nbsp;First you need to send your friend a key request. Click the social icon on your toolbar, then click Requests on the left side of your screen. Once they have accepted your request, you can search for your friend in the Search box on the upper left part of the screen, or click the social icon, then click on Friends. Click their name. You are now in your friend’s room!
             </div>
         </p>
 
@@ -723,11 +722,11 @@
 
           <p>
             <div class="text-info">
-                Q.&nbsp;&nbsp;What can I see in my friends room? 
+                Q.&nbsp;&nbsp;What can I see in my friends room?
             </div>
             <br>
             <div>
-                A.&nbsp;&nbsp;You can see your friend’s photos, objects, bookmarks and recent activity. If you like their funky furniture or come across a fun site in their room, you can add it to your room! 
+                A.&nbsp;&nbsp;You can see your friend’s photos, objects, bookmarks and recent activity. If you like their funky furniture or come across a fun site in their room, you can add it to your room!
             </div>
         </p>
 
@@ -735,11 +734,11 @@
 
           <p>
             <div class="text-info">
-                Q.&nbsp;&nbsp;Can I message my friend in my room? 
+                Q.&nbsp;&nbsp;Can I message my friend in my room?
             </div>
             <br>
             <div>
-                A.&nbsp;&nbsp;Not yet, but it will be an upcoming feature! We will be coming out with a lot of cool features in the future so sit back and enjoy the ride. 
+                A.&nbsp;&nbsp;Not yet, but it will be an upcoming feature! We will be coming out with a lot of cool features in the future so sit back and enjoy the ride.
             </div>
         </p>
 
@@ -747,11 +746,11 @@
 
           <p>
             <div class="text-info">
-                Q.&nbsp;&nbsp;Can I move objects around? 
+                Q.&nbsp;&nbsp;Can I move objects around?
             </div>
             <br>
             <div>
-                A.&nbsp;&nbsp;How to use my webroom is almost entirely up to you, but sometimes it looks funny when a bunch of bananas are hanging from the ceiling. We love crazy rooms, but we also want your webroom to be easy and intuitive to use, so we’ve placed objects in a logical fashion so you don’t have to search all over your room every time you want to access your favorite sites and apps. 
+                A.&nbsp;&nbsp;How to use my webroom is almost entirely up to you, but sometimes it looks funny when a bunch of bananas are hanging from the ceiling. We love crazy rooms, but we also want your webroom to be easy and intuitive to use, so we’ve placed objects in a logical fashion so you don’t have to search all over your room every time you want to access your favorite sites and apps.
             </div>
         </p>
 
