Adjust reset password form width, so the weird float issue doesn't happen on FF

--- a/app/assets/stylesheets/password_resets.css.scss
+++ b/app/assets/stylesheets/password_resets.css.scss
@@ -89,7 +89,7 @@
 }
 
 .pw_reset_form{
-  width:40%;
+  width:35%; /*change from 40 to 35 for FF users*/
   float:left;
   text-align: left;
   padding:0 5%;
