--- a/app/views/layouts/_signup.html.erb
+++ b/app/views/layouts/_signup.html.erb
@@ -245,7 +245,7 @@
                 Email Address:
             </p>
             <p id="signup_term_of_use_body">
-                web@mywebroom.com
+                info@mywebroom.com
             </p>
 
             <p id="signup_term_of_use_body">
@@ -253,11 +253,11 @@
             </p>
 
             <p id="signup_term_of_use_body">
-                707 Continental Circle
+                340 6th St., Unit 303
             </p>
 
             <p id="signup_term_of_use_body">
-                Mountain View, California 94040
+                San Francisco, CA 94103
            </p>
 
            <p id="signup_term_of_use_body">
